fixed date info to be more readable and added click to display feature

--- a/index.css
+++ b/index.css
@@ -24,6 +24,10 @@ main {
   margin: 1rem 0;
 }
 
+#upcomingParties ul li {
+  cursor: pointer;
+}
+
 #selectedParty {
   flex: 1;
 }
